# juv

./: .gitignore  Cargo.toml  README.md  test_juv.sh
src/: cli.rs  downloader.rs  julia.rs  main.rs  manifest.rs  project.rs  version_manager.rs
