[package]
name = "juv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
flate2 = "1.1.9"
indicatif = "0.18.4"
num-bigint = "0.4.6"
reqwest = { version = "0.13.2", features = ["stream"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tokio = { version = "1.51.0", features = ["macros", "process", "rt-multi-thread"] }
toml = "1.1.2"
